--- a/eRestaurantDemo/eRestaurantWebsite/Web.config
+++ b/eRestaurantDemo/eRestaurantWebsite/Web.config
@@ -8,9 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
+  <connectionStrings configSource="WebConnectionString.config" />
+    <!-->
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-eRestaurantWebsite-b9f2e26b-8aff-415d-810d-0b0e212c4b09;AttachDbFilename=|DataDirectory|\aspnet-eRestaurantWebsite-b9f2e26b-8aff-415d-810d-0b0e212c4b09.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
@@ -98,6 +99,10 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <!--this thing is important, as it prevents program to generate a data less database byitself.-->
+      <context type="eRestaurantSystem.DAL.eRestaurantContext, eRestaurantSystem" disableDatabaseInitialization="true"></context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
