--- a/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Entities\DTOs\ReservationByDate.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\MenuCategory.cs" />
+    <Compile Include="Entities\POCOs\MenuCategoryItems.cs" />
     <Compile Include="Entities\POCOs\MenuItem.cs" />
     <Compile Include="Entities\POCOs\ReservationDetail.cs" />
     <Compile Include="Entities\Reservation.cs" />
