--- a/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Entities\POCOs\MenuCategoryItems.cs" />
     <Compile Include="Entities\POCOs\MenuItem.cs" />
     <Compile Include="Entities\POCOs\ReservationDetail.cs" />
+    <Compile Include="Entities\POCOs\WaiterBilling.cs" />
     <Compile Include="Entities\Reservation.cs" />
     <Compile Include="Entities\SpecialEvent.cs" />
     <Compile Include="Entities\Table.cs" />
