Setup BLL for Security

--- a/eRestaurantDemo/eRestaurantWebsite/WebConnectionString.config
+++ b/eRestaurantDemo/eRestaurantWebsite/WebConnectionString.config
@@ -1,6 +1,9 @@
 ﻿<connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-eRestaurantWebsite-b9f2e26b-8aff-415d-810d-0b0e212c4b09;AttachDbFilename=|DataDirectory|\aspnet-eRestaurantWebsite-b9f2e26b-8aff-415d-810d-0b0e212c4b09.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-eRestaurantWebsite-b9f2e26b-8aff-415d-810d-0b0e212c4b09;AttachDbFilename=|DataDirectory|\aspnet-eRestaurantWebsite-b9f2e26b-8aff-415d-810d-0b0e212c4b09.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />-->
   <add name="EatIn"
+       connectionString="Data Source=.; Initial Catalog=eRestaurant; Integrated Security=SSPI"
+    providerName ="System.Data.SqlClient"/>
+<add name="DefaultConnection"
        connectionString="Data Source=.; Initial Catalog=eRestaurant; Integrated Security=SSPI"
     providerName ="System.Data.SqlClient"/>
   </connectionStrings>
