--- a/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\AdminController.cs" />
+    <Compile Include="BLL\Security\RoleManager.cs" />
     <Compile Include="BLL\Security\UserManager.cs" />
     <Compile Include="BusinessRuleException.cs" />
     <Compile Include="DAL\eRestaurantContext.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Entities\POCOs\WaiterOnDuty.cs" />
     <Compile Include="Entities\Reservation.cs" />
     <Compile Include="Entities\Security\ApplicationUser.cs" />
+    <Compile Include="Entities\Security\SecurityRoles.cs" />
     <Compile Include="Entities\SpecialEvent.cs" />
     <Compile Include="Entities\Table.cs" />
     <Compile Include="Entities\Waiter.cs" />
